--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
 
 
 <div class="container">  
-<%= yield %>
+  <span class="notice"><%= notice %></span>
+  <span class="alert"><%= alert %></span>
+  <%= yield %>
 </div>
+
+
 
 </body>
 </html>
